--- a/API/package.json
+++ b/API/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon --ignore ./* -q dist/index.js\""
   },
   "author": "",
   "license": "ISC",
