--- a/API/data/settings.json
+++ b/API/data/settings.json
@@ -1,1 +1,1 @@
-{"fan":0,"roof":0,"led":0,"water":0,"led1":0,"led2":0}
+{"fan":255,"roof":0,"led":0,"water":false,"led1":0,"led2":0,"watertrue":0,"waterfalse":0}
